--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     </nav>
     <div class="container">
         <section id="home" class="section">
-            <h1 class="fancy-title">KARUNIA HOME SERVICE Official Website</h1>
+            <h1 class="fancy-title">KARUNIA HOME SERVICE Website</h1>
             <div class="carousel">
                 <div class="slides">
                     <img src="https://www.tire.ae/files/uploads/close-up-hand-auto-mechanic-using-measuring-manifold-gauge-check-refrigerant-filling-car-air-conditioner-fix-checking-repair-service-support-maintenance-car-insurance.jpg" alt="Service 1">
