--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KARUNIA HOME SERVICE</title>
+    <title>KARUNIA CAR AC SERVICE</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
@@ -182,7 +182,7 @@
     </nav>
     <div class="container">
         <section id="home" class="section">
-            <h1 class="fancy-title">Selamat Datang di<br>KARUNIA HOME SERVICE<br>Official Website</h1>
+            <h1 class="fancy-title">Selamat Datang di<br>KARUNIA CAR AC SERVICE<br>Official Website</h1>
             <div class="carousel">
                 <div class="slides">
                     <img src="https://www.tire.ae/files/uploads/close-up-hand-auto-mechanic-using-measuring-manifold-gauge-check-refrigerant-filling-car-air-conditioner-fix-checking-repair-service-support-maintenance-car-insurance.jpg" alt="Service 1">
@@ -190,7 +190,7 @@
         </section>
         <section id="about" class="section">
             <h1 class="fancy-title">Tentang Kami</h1>
-            <p style="text-align: center">Kami dari KARUNIA HOME SERVICE menerima pengerjaan perawatan, perbaikan, dan pembersihan AC Mobil dan Alat Berat.<br> Karyawan kami sangat berpengalaman dan masih eksis hingga sekarang untuk pekerjaaan AC Mobil dan Alat Berat.<br> Dengan hasil yang akan membuat pengalaman berkendara/bekerja Anda semakin nyaman.<br> Untuk harga jasa kami beri harga paling murah untuk kualitas terbaik.<br> AC Mobil/Alat Berat Anda yang semula rusak/tidak berfungsi semestinya, akan kembali seperti ketika Mobil/Alat Berat Anda pertama kali beli.<br> Untuk sementara layanan kami hanya tersedia di Balikpapan, Kalimantan Timur.</p>
+            <p style="text-align: center">Kami dari KARUNIA CAR AC SERVICE menerima pengerjaan perawatan, perbaikan, dan pembersihan AC Mobil dan Alat Berat.<br> Karyawan kami sangat berpengalaman dan masih eksis hingga sekarang untuk pekerjaaan AC Mobil dan Alat Berat.<br> Dengan hasil yang akan membuat pengalaman berkendara/bekerja Anda semakin nyaman.<br> Untuk harga jasa kami beri harga paling murah untuk kualitas terbaik.<br> AC Mobil/Alat Berat Anda yang semula rusak/tidak berfungsi semestinya, akan kembali seperti ketika Mobil/Alat Berat Anda pertama kali beli.<br> Kami bisa datang langsung kerumah Anda untuk melakukan perbaikan/perawatan.<br> Untuk sementara layanan kami hanya tersedia di Balikpapan, Kalimantan Timur.</p>
         </section>
         <section id="services" class="section">
             <h1 class="fancy-title">Layanan Kami</h1>
@@ -206,7 +206,7 @@
                     <span>- Budi</span>
                 </div>
                 <div class="testimonial">
-                    <p>"Staf sangat profesional dan ramah. Mobil saya terlihat baru lagi!"</p>
+                    <p>"Staf sangat profesional dan ramah. Mobil saya terasa sejuk lagi!"</p>
                     <span>- Siti</span>
                 </div>
             </div>
