--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 </head>
 <body>
     <header>
-        KARUNIA HOME SERVICE
+        KARUNIA CAR AC SERVICE
     </header>
     <nav>
         <a href="#home">Beranda</a>
